# MULTI_ASSETS

./: .coverage  .env.example  .gitignore  AUDIT_COMPLET.md  CHANGELOG_PRODUCTION.md  CLAUDE.md  MULTI_ASSETS_MASTER_AUDIT.md  MULTI_ASSETS_MASTER_AUDIT_V2.md  MULTI_ASSETS_MASTER_AUDIT_V3.md  PLAN_ACTION.md  README.md  _mypy_extra.txt  _mypy_results.txt  _pylint_extra.txt  _pylint_results.txt  _ruff_extra.txt  _ruff_results.txt  _test_result.txt  all_backtest_trades_export.csv  all_backtest_trades_export.meta.json  check_state.py  install_task.bat  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_minimal.txt  run_trading_bot.ps1  setup.py  start_safe.ps1  test_out2.txt  uninstall_task.bat
.claude/: context.md  rules.md
.github/: copilot-instructions.md
agents/: code_auditor.md  quant_engineer.md  risk_manager.md
architecture/: decisions.md  system_design.md
backup_multi_assets_bot/: MULTI_SYMBOLS_backup.py  MULTI_SYMBOLS_backupV2.py
cache/: SOLUSDC_4h_2021-01-16.pkl  SOLUSDT_1d_2021-01-16.pkl  SOLUSDT_1h_2021-01-16.pkl  SOLUSDT_4h_2021-01-16.pkl
code/: backtest_engine.cpp  backtest_engine.pyx  backtest_engine_standard.cpp  backtest_engine_standard.pyx  indicators.cpp  indicators.pyx
config/: alert_cache.json  cumulative_earnings.json  ecosystem.config.js  ltv_history.json  portfolio_reference.json  setup.py  setup_environment.py  task_multi.xml  task_multi_new.xml  trades_export.csv
docs/: # Plan d'Action — Mise en Production MUL.md  AUDIT_ACTION_PLAN.md  COMPLETE_3PHASE_INTEGRATION_REPORT.md  EMAIL_ALERT.md  FILE_ENGINEERING_PLAN.md  FIX_DUPLICATE_RECVWINDOW.md  FIX_MIN_NOTIONAL.md  LOGIQUE_BOT_RESUME.md  OPTIMIZATION_APPLIED.md  ORIGINAL_DASHBOARD_HTML.md  PHASE1_OPTIMIZATIONS.md  PHASE2_OPTIMIZATIONS.md  PHASE3_CODE_LOCATIONS.md  PHASE3_FINAL_REPORT.md  PHASE3_INTEGRATION_COMPLETE.md  PHASE3_INTEGRATION_SUMMARY.md  PHASE3_OPTIMIZATIONS.md  PLAN_ACTION.md  PLAN_OPTIMISATION.md  PROTECTIONS_CHANGELOG.md  STRUCTURAL_AUDIT_ACTION_PLAN.md
knowledge/: binance_constraints.md  trading_constraints.md
states/: bot_state.pkl
tasks/: WORKFLOW.md  audit_email_alerts.md  audit_system.md  correct_p0.md  lessons.md
tests/: bench_optimization.py  conftest.py  local_stoch_check.py  test_api_keys.py  test_backtest.py  test_backtest_only.py  test_bot_launcher.py  test_cache_manager.py  test_circuit_breaker.py  test_config.py  test_core.py  test_cython_integrity.py  test_dashboard_launcher.py  test_dashboard_server.py  test_data_fetcher.py  test_e2e_testnet.py  test_email_alert.py  test_error_handler.py  test_exchange_client.py  test_exchange_client_idempotency.py  test_exchange_client_new.py  test_execute_trades_unit.py  test_indicators_check.py  test_indicators_consistency.py  test_metrics.py  test_order_manager_sl_chain.py  test_p0_fixes.py  test_p1_p2_fixes.py  test_p2_01_lookahead.py  (+20 more)
(+146 files in other folders)
