[tool.setuptools]
packages = ["backtest_engine", "indicators", "trading_bot"]
package-dir = {"backtest_engine" = "src/backtest_engine", "indicators" = "src/indicators", "trading_bot" = "src/trading_bot"}
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[project]
name = "trading_bot"
version = "0.1.0"
description = "Bot trading Binance modulaire"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "ta",
    "structlog",
    "pydantic",
    "rich",
    "schedule",
    "binance",
    "pytest"
]
